--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,8 @@ android {
 
     dependencies {
         implementation 'com.plaid.link:sdk-core:3.2.4'
+//        implementation 'com.plaid:plaid-java:9.0.0-beta-1'
+        implementation 'com.plaid:plaid-java:8.1.0'
     }
 
     buildTypes {
@@ -37,7 +39,6 @@ android {
 }
 
 dependencies {
-
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
