--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
 
     dependencies {
         implementation 'com.plaid.link:sdk-core:3.2.4'
+        implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1'
 //        implementation 'com.plaid:plaid-java:9.0.0-beta-1'
         implementation 'com.plaid:plaid-java:8.1.0'
     }
