--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,11 @@ android {
     dependencies {
         implementation 'com.plaid.link:sdk-core:3.2.4'
         implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1'
+        implementation project(':android_lib')
+
 //        implementation 'com.plaid:plaid-java:9.0.0-beta-1'
         implementation 'com.plaid:plaid-java:8.1.0'
+        implementation("mysql:mysql-connector-java:8.0.15")
     }
 
     buildTypes {
@@ -40,15 +43,6 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
-    implementation 'androidx.preference:preference:1.1.1'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.4'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.4'
 }
