--- a/.gitignore
+++ b/.gitignore
@@ -17,9 +17,13 @@ out/
 #  Uncomment the following line in case you need and you don't have the release build type files in your app
 # release/
 
+*.DS_Store
+diff.*
+
 # Gradle files
 .gradle/
 build/
+
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -59,6 +63,8 @@ captures/
 .externalNativeBuild
 .cxx/
 
+
+
 # Google Services (e.g. APIs or Firebase)
 # google-services.json
 
@@ -83,3 +89,22 @@ lint/generated/
 lint/outputs/
 lint/tmp/
 # lint/reports/
+
+#amplify
+amplify/\#current-cloud-backend
+amplify/.config/local-*
+amplify/logs
+amplify/mock-data
+amplify/backend/amplify-meta.json
+amplify/backend/awscloudformation
+amplify/backend/.temp
+build/
+dist/
+node_modules/
+aws-exports.js
+awsconfiguration.json
+amplifyconfiguration.json
+amplify-build-config.json
+amplify-gradle-config.json
+amplifytools.xcconfig
+.secret-*
