--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,9 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        classpath 'com.amplifyframework:amplify-tools-gradle-plugin:1.0.2'
+
     }
 }
 
@@ -24,3 +27,6 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+
+apply plugin: 'com.amplifyframework.amplifytools'
