--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Intermediate">
         <activity
-            android:name=".MainActivity"
+            android:name=".fragments.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.Intermediate.NoActionBar">
             <intent-filter>
