--- a/firebase.json
+++ b/firebase.json
@@ -16,14 +16,17 @@
     "auth": {
       "port": 9099
     },
-    "functions": {
-      "port": 5001
-    },
     "firestore": {
       "port": 8080
     },
     "ui": {
       "enabled": true
+    },
+    "functions": {
+      "port": 5001
+    },
+    "storage": {
+      "port": 9199
     }
   }
 }
